# JokerAI

./: .gitignore  README.md  install_and_test.sh  joker_game.py  pyproject.toml  test_units.py
.ipynb_checkpoints/: JokerTester-checkpoint.ipynb
agents/: decision_bot_1.py  decision_bot_abstract.py  random_caller_random_player.py  rule_based_bot.py  utils.py
comp/: comp.ipynb  head_to_head.ipynb  stable_baselines.ipynb
data/: 1000_games_2023-08-06 15:35:57.643626.csv  1000_games_2023-08-06 15:46:01.806641.csv  1000_games_2023-08-06 15:48:23.940598.csv  1000_games_2023-08-06 16:34:16.358223.csv  100_games_2023-08-06 15:46:39.043357.csv  10_games_2023-08-06 15:46:46.916463.csv
models/: 2023-08-07 17:02:18.585370scaler.joblib  2023-08-07 17:56:39.465800scaler.joblib  2023-08-07 18:17:05.839020scaler.joblib  2023-08-07 19:15:52.908292scaler.joblib  calling_model10000_epochs_2023-08-07 17:56:31.456628.pth  calling_model1000_epochs_2023-08-07 17:41:18.026200.pth  calling_model1000_epochs_2023-08-07 18:17:04.201946.pth  calling_model1000_epochs_2023-08-07 19:15:52.371904.pth  calling_model10_epochs_2023-08-07 15:56:16.848403.pth  calling_model10_epochs_2023-08-07 16:01:19.990395.pth  model_structure_1.py
notebooks/: time.ipynb  train_caller.ipynb
src/: card.py  deck.py  display.py  env.py  game.py  hand.py  joker.py  joker_env.py  joker_game.py  model_builder.ipynb  objects.py  player.py  simulation.py  table.py  test_units.py  utils.py
tests/: agents_utils_test.py  card_test.py  deck_test.py  env_test.py  game_test.py  player_test.py  src_utils_test.py  (+1 more)
(+3 files in other folders)
